--- a/app/css/layout.css
+++ b/app/css/layout.css
@@ -1,3 +1,19 @@
-* {
-  color: red;
+.link {
+  padding-right: .5em;
+  padding-bottom: .5em;
 }
+
+form {
+  color: #44f;
+}
+
+
+li {
+  color: #900;
+}
+
+.states {
+  display: inline-block;
+  margin: .5em;
+}
+
