--- a/app/templates/auth_view.html
+++ b/app/templates/auth_view.html
@@ -7,5 +7,5 @@
     <input type="password" id="password" required data-ng-model="user.password">
     <button type="submit" data-ng-disabled="authForm.$invalid">{{buttonText}}</button>
   </form>
-  <button type="button" data-ng-click="changePlaces()">Change Places</button>
+  <button type="button" data-ng-click="changePlaces()">{{swapPlaces}}</button>
 </section>
